frontend/src/ui-kit.css
/* ... */
.widget--double {
  width: 416px;
  max-width: 100%;
}

.widget .widget-header {
  font-size: 18px;
  font-weight: 400;
}
.widget .widget-value {
  padding-top: 10px;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
  font-size: 16px;
  font-weight: 400;
  line-height: 150%;
  font-family: var(--font-header);
}
.widget .widget-value--lg {
  font-size: 36px;
  font-weight: 400;
  line-height: 100%;
  font-family: var(--font-normal);
}
.widget .widget-value--accent {
  padding-top: 30px;
  font-size: 18px;
  font-weight: 400;
}
.widget .widget-value--accent em {
  font-size: 64px;
  font-style: normal;
  font-family: var(--font-analytical);
}
.widget-value.widget-value--fragile {
  align-items: flex-start;
  justify-content: space-between;
  margin-top: 18px;
  margin-bottom: 12px;
  max-width: 60%;
}
.widget-value.widget-value--stats {
  align-items: flex-start;
}

.fragile-value {
  font-family: var(--font-header);
  font-size: 16px;
  text-align: left;
  line-height: 120%;
}
.fragile-value--accent {
  color: #000000;
  font-size: 18px;
}
.fragile-value--accent em {
  font-style: normal;
  font-size: 48px;
  font-family: var(--font-analytical);
}
.fragile-preview {
  position: absolute;
  _width: 35%;
  height: 100%;
  top: 0;
  right: 0;
  border-top-right-radius: 16px;
  border-bottom-right-radius: 16px;
  object-fit: cover;
  cursor: pointer;

  width: 45%;
  clip-path: polygon(100% 0%, 100% 90%, 100% 100%, 35% 100%, 0% 90%, 25% 0%);
  opacity: .5;
  filter: hue-rotate(30deg) grayscale(90%);
  transition: opacity .3s ease-in-out, filter .3s ease-in-out;
}
.fragile-preview:hover {
  opacity: 1;
  filter: hue-rotate(0deg) grayscale(0%);
}

.stats-value {
  font-family: var(--font-analytical);
  font-size: 36px;
  margin-top: 9px;
  margin-bottom: 7px;
}
.stats-sub {
  font-size: 12px;
  margin-bottom: 10px;
  letter-spacing: .5px;
}
.stats-chart {
  flex: 1;
  display: flex;
  align-items: flex-end;
  overflow: hidden;
  max-width: 100%;
  width: 100%;
  border-bottom: 1px solid rgba(255,255,255, .17);
}

.stats-chart .bar {
  background: rgba(255,255,255, .17);
  width: 12px;
  min-height: 3px;
  margin-right: 4px;
}
.stats-chart .bar:hover {
  background: rgba(255,255,255, .50);
}
.stats-chart .bar--hl {
  background: #ffffff;
  border-top: 3px solid #47A066;
}

.widget-run {
  width: 311px;
  height: 416px;
  border-radius: 16px;
  padding: 26px;
}
.widget-run .run-form {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  height: 100%;
}
.widget-run .run-form .input-box {
  border-width: 2px;
  border-radius: 4px;
  box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.25);
}
.widget-run .run-form .actions {
  flex: 1;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}


/* VIEWPORTS SELECTOR */

.viewports-selector-header {
  font-weight: 500;
  font-size: 16px;
  color: #1F1F1F;
}
.viewports-selector {
  margin-top: 10px;
  overflow-wrap: break-word;
}
.viewports-selector .viewport-toggle {
  font-size: 14px;
  font-weight: normal;
  color: #656565;
  background: #FFFFFF;
  border-radius: 4px;
  line-height: 27px;
  padding: 3px 6px;
  cursor: pointer;
  opacity: .3;
  transition: opacity .2s ease-in-out, background-color .2s ease-in-out;

  margin-left: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.viewports-selector .viewport-toggle--on {
  opacity: 1;
  color: #414141;
  font-weight: 500;
}
.viewports-selector .viewport-toggle:hover {
  opacity: .6;
}
.viewports-selector .viewport-toggle--on:hover  {
  opacity: .85;
}

.sidebar-placeholder .viewports-selector .viewport-toggle {
  font-size: 16px;
  font-weight: normal;
  background: #E2E2E2;
  color: #3A3A3A;
  padding: 9px 12px;
  line-height: 300%;
  margin-right: 16px;
  margin-left: 0;
  opacity: 1;
}
.sidebar-placeholder .viewports-selector .viewport-toggle--on {
  background: var(--color-blue);
  color: var(--color-white);
}


/* LABELS */

.widget-label {}
.widget-label--xl .header {
  margin-bottom: 8px;
  font-size: 24px;
  margin-top: 0;
  font-family: var(--font-header);
}
.widget-label--xl .header--semibold {
  font-weight: 600;
  font-size: 22px;
}
.widget-label .state {
  color: #ffffff;
  text-align: center;

}
.widget-label--xl .state {
  font-size: 7.4vh;
  font-weight: bold;
  margin-bottom: 36px;
  border-radius: 8px;
  padding: 8px 1.875vw;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.widget-label .state--passed {
  background: var(--color-green);
  border-left: 7px solid var(--color-green-dark);
}
.widget-label .state--failed {
  background: var(--color-failed);
  border-left: 7px solid var(--color-red-dark);
}
.widget-label .stats {
  display: flex;
  width: 100%;
}
.widget-label .stats .stats-left,
.widget-label .stats .stats-right {
  flex: 1;
  font-size: 18px;
  font-weight: normal;
}
.widget-label .stats .stats-left em,
.widget-label .stats .stats-right em {
  font-weight: bold;
  font-style: normal;
}

